[gd_scene load_steps=11 format=4 uid="uid://drahxmf6cqkl5"]

[ext_resource type="Script" uid="uid://qixflvpw0nmu" path="res://scripts/mapa_base_script.gd" id="1_wjyxw"]
[ext_resource type="Texture2D" uid="uid://bx4u8gv12cx7q" path="res://assets/tiles.png" id="2_fjkyt"]
[ext_resource type="AudioStream" uid="uid://dxhruse3b5sx0" path="res://sonidos/Hedge-Wizard-Huffing-Petrichor.wav" id="2_uhbbg"]
[ext_resource type="Texture2D" uid="uid://i84n8rbbx8xm" path="res://assets/animated-tiles.png" id="4_nv8ul"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nv8ul"]
texture = ExtResource("2_fjkyt")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
3:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0

[sub_resource type="TileSet" id="TileSet_642qs"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_nv8ul")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_642qs"]
texture = ExtResource("4_nv8ul")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/animation_columns = 6
0:1/animation_speed = 5.0
0:1/animation_frame_0/duration = 1.0
0:1/animation_frame_1/duration = 1.0
0:1/animation_frame_2/duration = 1.0
0:1/animation_frame_3/duration = 1.0
0:1/animation_frame_4/duration = 1.0
0:1/animation_frame_5/duration = 1.0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0

[sub_resource type="TileSet" id="TileSet_fjkyt"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_642qs")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fjkyt"]
texture = ExtResource("2_fjkyt")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
3:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0

[sub_resource type="TileSet" id="TileSet_uhbbg"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_fjkyt")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wjyxw")

[node name="soundtrack_mapa" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uhbbg")
volume_db = -10.0

[node name="marcador_pj" type="Marker2D" parent="."]
position = Vector2(320, 288)

[node name="marcador_enemigo" type="Marker2D" parent="."]
position = Vector2(641, 352)

[node name="tiles" type="Node2D" parent="."]

[node name="tile_capa_trasera" type="TileMapLayer" parent="tiles"]
tile_map_data = PackedByteArray("AAAGAAUAAAAAAAwAAAAGAAYAAAAAAAwAAAAGAAcAAAAAAAwAAAAGAAgAAAAAAAwAAAAGAAkAAAAAAAwAAAAGAAoAAAAAAAwAAAAGAAsAAAAAAAwAAAAGAAwAAAAAAAwAAAAGAA0AAAAAAAwAAAAHAAUAAAAAAAwAAAAHAAYAAAAAAAwAAAAHAAcAAAAAAAwAAAAHAAgAAAAAAAwAAAAHAAkAAAAAAAwAAAAHAAoAAAAAAAwAAAAHAAsAAAAAAAwAAAAHAAwAAAAAAAwAAAAHAA0AAAAAAAwAAAAIAAUAAAAAAAwAAAAIAAYAAAAAAAwAAAAIAAcAAAAAAAwAAAAIAAgAAAAAAAwAAAAIAAkAAAAAAAwAAAAIAAoAAAAAAAwAAAAIAAsAAAAAAAwAAAAIAAwAAAAAAAwAAAAIAA0AAAAAAAwAAAAJAAUAAAAAAAwAAAAJAAYAAAAAAAwAAAAJAAcAAAAAAAwAAAAJAAgAAAAAAAwAAAAJAAkAAAAAAAwAAAAJAAoAAAAAAAwAAAAJAAsAAAAAAAwAAAAJAAwAAAAAAAwAAAAJAA0AAAAAAAwAAAAKAAUAAAAAAAwAAAAKAAYAAAAAAAwAAAAKAAcAAAAAAAwAAAAKAAgAAAAAAAwAAAAKAAkAAAAAAAwAAAAKAAoAAAAAAAwAAAAKAAsAAAAAAAwAAAAKAAwAAAAAAAwAAAAKAA0AAAAAAAwAAAALAAUAAAAAAAwAAAALAAYAAAAAAAwAAAALAAcAAAAAAAwAAAALAAgAAAAAAAwAAAALAAkAAAAAAAwAAAALAAoAAAAAAAwAAAALAAsAAAAAAAwAAAALAAwAAAAAAAwAAAALAA0AAAAAAAwAAAAMAAUAAAAAAAwAAAAMAAYAAAAAAAwAAAAMAAcAAAAAAAwAAAAMAAgAAAAAAAwAAAAMAAkAAAAAAAwAAAAMAAoAAAAAAAwAAAAMAAsAAAAAAAwAAAAMAAwAAAAAAAwAAAAMAA0AAAAAAAwAAAANAAUAAAAAAAwAAAANAAYAAAAAAAwAAAANAAcAAAAAAAwAAAANAAgAAAAAAAwAAAANAAkAAAAAAAwAAAANAAoAAAAAAAwAAAANAAsAAAAAAAwAAAANAAwAAAAAAAwAAAANAA0AAAAAAAwAAAAOAAUAAAAAAAwAAAAOAAYAAAAAAAwAAAAOAAcAAAAAAAwAAAAOAAgAAAAAAAwAAAAOAAkAAAAAAAwAAAAOAAoAAAAAAAwAAAAOAAsAAAAAAAwAAAAOAAwAAAAAAAwAAAAOAA0AAAAAAAwAAAAPAAUAAAAAAAwAAAAPAAYAAAAAAAwAAAAPAAcAAAAAAAwAAAAPAAgAAAAAAAwAAAAPAAkAAAAAAAwAAAAPAAoAAAAAAAwAAAAPAAsAAAAAAAwAAAAPAAwAAAAAAAwAAAAPAA0AAAAAAAwAAAAQAAUAAAAAAAwAAAAQAAYAAAAAAAwAAAAQAAcAAAAAAAwAAAAQAAgAAAAAAAwAAAAQAAkAAAAAAAwAAAAQAAoAAAAAAAwAAAAQAAsAAAAAAAwAAAAQAAwAAAAAAAwAAAAQAA0AAAAAAAwAAAARAAUAAAAAAAwAAAARAAYAAAAAAAwAAAARAAcAAAAAAAwAAAARAAgAAAAAAAwAAAARAAkAAAAAAAwAAAARAAoAAAAAAAwAAAARAAsAAAAAAAwAAAARAAwAAAAAAAwAAAARAA0AAAAAAAwAAAASAAUAAAAAAAwAAAASAAYAAAAAAAwAAAASAAcAAAAAAAwAAAASAAgAAAAAAAwAAAASAAkAAAAAAAwAAAASAAoAAAAAAAwAAAASAAsAAAAAAAwAAAASAAwAAAAAAAwAAAASAA0AAAAAAAwAAAATAAUAAAAAAAwAAAATAAYAAAAAAAwAAAATAAcAAAAAAAwAAAATAAgAAAAAAAwAAAATAAkAAAAAAAwAAAATAAoAAAAAAAwAAAATAAsAAAAAAAwAAAATAAwAAAAAAAwAAAATAA0AAAAAAAwAAAAUAAUAAAAAAAwAAAAUAAYAAAAAAAwAAAAUAAcAAAAAAAwAAAAUAAgAAAAAAAwAAAAUAAkAAAAAAAwAAAAUAAoAAAAAAAwAAAAUAAsAAAAAAAwAAAAUAAwAAAAAAAwAAAAUAA0AAAAAAAwAAAAVAAUAAAAAAAwAAAAVAAYAAAAAAAwAAAAVAAcAAAAAAAwAAAAVAAgAAAAAAAwAAAAVAAkAAAAAAAwAAAAVAAoAAAAAAAwAAAAVAAsAAAAAAAwAAAAVAAwAAAAAAAwAAAAVAA0AAAAAAAwAAAAWAAUAAAAAAAwAAAAWAAYAAAAAAAwAAAAWAAcAAAAAAAwAAAAWAAgAAAAAAAwAAAAWAAkAAAAAAAwAAAAWAAoAAAAAAAwAAAAWAAsAAAAAAAwAAAAWAAwAAAAAAAwAAAAWAA0AAAAAAAwAAAAXAAUAAAAAAAwAAAAXAAYAAAAAAAwAAAAXAAcAAAAAAAwAAAAXAAgAAAAAAAwAAAAXAAkAAAAAAAwAAAAXAAoAAAAAAAwAAAAXAAsAAAAAAAwAAAAXAAwAAAAAAAwAAAAXAA0AAAAAAAwAAAAGAAQAAAAAAAwAAAAHAAQAAAAAAAwAAAAIAAQAAAAAAAwAAAAJAAQAAAAAAAwAAAAKAAQAAAAAAAwAAAALAAQAAAAAAAwAAAAMAAQAAAAAAAwAAAANAAQAAAAAAAwAAAAOAAQAAAAAAAwAAAAPAAQAAAAAAAwAAAAQAAQAAAAAAAwAAAARAAQAAAAAAAwAAAASAAQAAAAAAAwAAAATAAQAAAAAAAwAAAAUAAQAAAAAAAwAAAAVAAQAAAAAAAwAAAAWAAQAAAAAAAwAAAAXAAQAAAAAAAwAAAA=")
tile_set = SubResource("TileSet_642qs")

[node name="tile_items" type="TileMapLayer" parent="tiles"]
tile_map_data = PackedByteArray("AAAHAAUAAAAAAAEAAAAVAAwAAAAAAAEAAAALAAwAAAAAAAEAAAAVAAgAAAAAAAEAAAAIAAwAAAAAAAEAAAARAAYAAAAAAAEAAAAWAAQAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_fjkyt")

[node name="tile_capa_delantera" type="TileMapLayer" parent="tiles"]
tile_map_data = PackedByteArray("AAAYAAgAAAABAAEAAFAFAAgAAAABAAEAAGAFAA4AAAAAAAEAAAAFAAUAAAABAAEAAGAFAAYAAAABAAEAAGAFAAcAAAABAAEAAGAFAAkAAAABAAEAAGAFAAoAAAABAAEAAGAFAAsAAAABAAEAAGAFAAwAAAABAAEAAGAFAA0AAAABAAEAAGAYAA4AAAAAAAEAAAAYAAQAAAABAAEAAFAYAAUAAAABAAEAAFAYAAYAAAABAAEAAFAYAAcAAAABAAEAAFAYAAkAAAABAAEAAFAYAAoAAAABAAEAAFAYAAsAAAABAAEAAFAYAAwAAAABAAEAAFAYAA0AAAABAAEAAFAFAAQAAAABAAEAAGAFAAMAAAAAAAEAAAAYAAMAAAAAAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAIAAMAAAABAAEAAAAJAAMAAAABAAEAAAAKAAMAAAABAAEAAAALAAMAAAABAAEAAAAMAAMAAAABAAEAAAANAAMAAAABAAEAAAAOAAMAAAABAAEAAAAPAAMAAAABAAEAAAAQAAMAAAABAAEAAAARAAMAAAABAAEAAAASAAMAAAABAAEAAAATAAMAAAABAAEAAAAUAAMAAAABAAEAAAAVAAMAAAABAAEAAAAWAAMAAAABAAEAAAAXAAMAAAABAAEAAAAGAA4AAAABAAEAADAHAA4AAAABAAEAADAIAA4AAAABAAEAADAJAA4AAAABAAEAADAKAA4AAAABAAEAADALAA4AAAABAAEAADAMAA4AAAABAAEAADANAA4AAAABAAEAADAOAA4AAAABAAEAADAPAA4AAAABAAEAADAQAA4AAAABAAEAADARAA4AAAABAAEAADASAA4AAAABAAEAADATAA4AAAABAAEAADAUAA4AAAABAAEAADAVAA4AAAABAAEAADAWAA4AAAABAAEAADAXAA4AAAABAAEAADA=")
tile_set = SubResource("TileSet_uhbbg")

[connection signal="finished" from="soundtrack_mapa" to="." method="_on_soundtrack_mapa_finished"]
